# master-cs

./: pyproject.toml  test.py
.devcontainer/: devcontainer.json
.devcontainer/Module 1/: devcontainer.json  docker-compose.yml
.devcontainer/Module 2/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/Module 9/: Dockerfile  devcontainer.json  docker-compose.yml
Module 1/Coursework/: main.py  readme.md  tests.py
Module 1/assignment/: digital_logic.py  excercise_5_1_example.txt  exercise_2_3.py  exercise_3_4_1.py
Module 2/: README.md  deploy-mayar.sh
Module 2/config/: app.ini  db.sql
Module 2/www/: blog.php  blog_cards.php  blog_post_full.php  blog_process_form.php  db.php  footer.php  index.html  index.php  main.js  navigation.php  news.php  news_article.php  news_cards.php  tables.css
Module 7/: Andreas_Ziegler_2208771_company_database.sql  Readme.md  inserts.sql  non trivial DDL.sql
Module 9/: pyproject.toml
Module 9/excercises/week_1/: main.py
Module 9/excercises/week_2/: chess.py  linked_list.py
Module 9/tests/: test_week_2.py
Module 9/week 1/: point.py
assignment/: 2_3.py  3_4.py  digital_logic.py  excercise_5_1.py  exercise_3_4_2.py  exercuse_4_4_1.py
