
[tool.poetry]
name = "master-cs"
version = "0.1.0"
description = ""
authors = ["LindezaGrey <39629455+LindezaGrey@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"

[tool.poetry.dev-dependencies]
ruff = "^0.0.256"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
